--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: ruby
 rvm:
   - 2.2.3
+  
+env:
+  - DB=sqlite
+  
+sqlite: &sqlite
+  adapter: sqlite3
+  database: db/<%= Rails.env %>.sqlite3
