--- a/config/database.travis.yml
+++ b/config/database.travis.yml
@@ -8,11 +8,18 @@ sqlite: &sqlite
   adapter: sqlite3
   database: db/<%= Rails.env %>.sqlite3
   
+postgresql: &postgresql
+  adapter: postgresql
+  username: postgres
+  password:
+  database: myapp_<%= Rails.env %>
+  min_messages: ERROR
+  
 defaults: &defaults
   pool: 5
   timeout: 5000
   host: localhost
-  <<: *<%= ENV['DB'] || "sqlite" %>
+  <<: *<%= ENV['DB'] || "postgresql" %>
 
 development:
   <<: *defaults
