--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,7 @@ rvm:
 env:
   - DB=postgresql
   
-before_install: cp config/database.travis.yml config/database.yml
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+  - cp config/database.travis.yml config/database.yml
+  
