--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ env:
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
   - cp config/database.travis.yml config/database.yml
+  - cp config/ci.secrets.yml config/secrets.yml
   
