--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ env:
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
   - cp config/database.travis.yml config/database.yml
+
+script:
+  - ruby -rubygems spec/travis/brakeman.rb
