--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
   - cp config/database.travis.yml config/database.yml
+  - gem install brakeman
 
 script:
   - ruby -rubygems spec/travis/brakeman.rb
