Check card via AJAX
Polish

Polish

travis

travis

Polish

Polish

Polish notice

Polish

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: ruby
+cache: bundler
 rvm:
   - 2.2.3
 
@@ -8,6 +9,7 @@ env:
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
   - cp config/database.travis.yml config/database.yml
+  - rake db:migrate RAILS_ENV=test
   - gem install brakeman
 
 script:
